[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogue_manager/components/search.gd" type="Script" id=1]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="SearchAndReplace" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Search" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Input" type="LineEdit" parent="Search"]
margin_right = 1726.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Search for text..."
caret_blink = true
caret_blink_speed = 0.5

[node name="ResultLabel" type="Label" parent="Search"]
margin_left = 1730.0
margin_top = 5.0
margin_right = 1766.0
margin_bottom = 19.0
text = "0 of 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="ToolButton" parent="Search"]
margin_left = 1770.0
margin_right = 1798.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="NextButton" type="ToolButton" parent="Search"]
margin_left = 1802.0
margin_right = 1830.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="VSeparator" type="VSeparator" parent="Search"]
margin_left = 1834.0
margin_right = 1838.0
margin_bottom = 24.0

[node name="ReplaceCheckbox" type="CheckBox" parent="Search"]
margin_left = 1842.0
margin_right = 1920.0
margin_bottom = 24.0
text = "Replace"

[node name="Replace" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 1920.0
margin_bottom = 52.0

[node name="ReplaceLabel" type="Label" parent="Replace"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Replace with:"

[node name="Input" type="LineEdit" parent="Replace"]
margin_left = 89.0
margin_right = 1767.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ReplaceButton" type="ToolButton" parent="Replace"]
margin_left = 1771.0
margin_right = 1833.0
margin_bottom = 24.0
text = "Replace"

[node name="ReplaceAllButton" type="ToolButton" parent="Replace"]
margin_left = 1837.0
margin_right = 1920.0
margin_bottom = 24.0
text = "Replace All"

[connection signal="visibility_changed" from="." to="." method="_on_SearchAndReplace_visibility_changed"]
[connection signal="focus_entered" from="Search/Input" to="." method="_on_Input_focus_entered"]
[connection signal="gui_input" from="Search/Input" to="." method="_on_Input_gui_input"]
[connection signal="text_changed" from="Search/Input" to="." method="_on_Input_text_changed"]
[connection signal="pressed" from="Search/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="Search/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="toggled" from="Search/ReplaceCheckbox" to="." method="_on_ReplaceCheckbox_toggled"]
[connection signal="focus_entered" from="Replace/Input" to="." method="_on_Input_focus_entered"]
[connection signal="gui_input" from="Replace/Input" to="." method="_on_Input_gui_input"]
[connection signal="pressed" from="Replace/ReplaceButton" to="." method="_on_ReplaceButton_pressed"]
[connection signal="pressed" from="Replace/ReplaceAllButton" to="." method="_on_ReplaceAllButton_pressed"]
